<resources>
    <string name="app_name">CineMates</string>
    <string name="email_placeholder">E-mail address</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Sign up!</string>
    <string name="logo_sentence">The app for movie lovers</string>
    <string name="have_account">Already have an account?</string>
    <string name="have_account_button">Login!</string>
    <string name="signup_screen">Sign Up</string>
    <string name="username_signup_textfield">Enter your username…</string>
    <string name="email_signup_textfield">Enter your e-mail address…</string>
    <string name="password_signup_textfield">Enter your password…</string>
    <string name="password_confirmation_signup_textfield">Confirm your password…</string>
    <string name="signup_button">Sign Up</string>
    <string name="password_recover_title">Password recover</string>
    <string name="password_recover_text">Did you forget your password?</string>
    <string name="password_recover_mail">Enter your e-mail address and press \"Continue\".</string>
    <string name="continue_button">Continue</string>
    <string name="code_sent">We have sent you a confirmation code. Check your inbox!</string>
    <string name="enter_code">Enter confirmation code:</string>
    <string name="new_password_text">Almost there!\nEnter a new password</string>
    <string name="current_password">Old password…</string>
    <string name="new_password">New password…</string>
    <string name="confirm_new_password">Confirm new password…</string>
    <string name="change_password">Change password</string>
    <string name="password_error">At least 8 characters. It must contain an uppercase,\n lowercase, special character and a number</string>
    <string name="email_error">E-mail is not in a valid format</string>
    <string name="password_empty">Password field can\'t be empty</string>
    <string name="user_not_confirmed">This account is not yet confirmed.</string>
    <string name="resend_email">Press here to get a new confirmation email</string>
    <string name="server_unreachable">Something went wrong.\nCheck your connection and try again</string>
    <string name="generic_error">Generic error.\nPlease try again later</string>
    <string name="email_sent">E-mail sent correctly</string>
    <string name="wrong_credentials">E-mail or password is incorrect</string>
    <string name="no_account_error">There is no account with this e-mail</string>
    <string name="confirmation_code_error">The entered code is not valid. Try again</string>
    <string name="confirm_password_error">The two passwords don\'t match</string>
    <string name="username_error">Between 3 and 10 characters and \n must not contain special characters</string>
    <string name="recover_password_success">Password has been\nsuccessfully changed!</string>
    <string name="back_to_login">Back to login</string>
    <string name="signup_success">Signup succeeded!\n\nCheck your inbox\nto confirm your account</string>
    <string name="email_already_taken">E-mail already taken</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="signup_in_progress">Signup in progress…</string>
    <string name="bottom_bar_homepage">Home</string>
    <string name="bottom_bar_search">Search</string>
    <string name="bottom_bar_discover_lists">Discover lists</string>
    <string name="bottom_bar_suggest_movie">Suggest movie</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="movie_status_released">Released</string>
    <string name="movie_status_canceled">Canceled</string>
    <string name="movie_status_post_production">Post Production</string>
    <string name="movie_status_in_production">In Production</string>
    <string name="movie_status_planned">Planned</string>
    <string name="movie_status_rumored">Rumored</string>
    <string name="notification_title">Notifications</string>
    <string name="accept_follow_request">Accept</string>
    <string name="decline_follow_request">Decline</string>
    <string name="follow_request_text">asked to follow you</string>
    <string name="reaction_text">reacted to one of your lists</string>
    <string name="rating_text">rated one of your lists</string>
    <string name="comment_text">commented one of your lists</string>
    <string name="follow_request_accepted_text">accepted your follow request</string>
    <string name="outcome_report_to_my_comment_text">has decided the outcome for your reported comment</string>
    <string name="outcome_report_to_my_report_text">has decided the outcome for one of your reports</string>
    <string name="report_to_my_comment_text">informs you that one of your comments has been reported</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="accepted_request">Request accepted</string>
    <string name="declined_request">Request declined</string>
    <string name="no_notification_title">No notifications yet!</string>
    <string name="no_notification_text">Check here for information about\nyour follow requests, your\nlist interactions and a lot more</string>
    <string name="update">Update</string>
    <string name="administrator_text">An administrator</string>
    <string name="in_theaters">In theaters</string>
    <string name="popular">Most popular</string>
    <string name="upcoming">Upcomings</string>
    <string name="top_rated">Top rated on TMDb</string>
    <string name="view_all">View all</string>
    <string name="tmdb_rating_label">TMDb &#9733;</string>
    <string name="no_description_available">No description available for this movie.</string>
    <string name="all_now_playing">Movies in theaters</string>
    <string name="all_popular">Popular movies</string>
    <string name="all_upcomings">Upcoming movies</string>
    <string name="all_top_rated">Top rated movies</string>
    <string name="release_date">Release date:</string>
    <string name="status">Status:</string>
    <string name="director">Director:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="userprofile_title">My profile</string>
    <string name="userprofile_bio">Bio</string>
    <string name="userprofile_biotext">Hello! I\'m using CineMates :)</string>
    <string name="userprofile_movielists">Movie lists</string>
    <string name="userprofile_othermovielists">other lists</string>
    <string name="userprofile_follower">Follower</string>
    <string name="userprofile_following">Following</string>
    <string name="userprofile_towatch_movielist">Watchlist</string>
    <string name="userprofile_favorites_movielist">Favorites</string>
    <string name="expand_description">expand</string>
    <string name="collapse_description">collapse</string>
    <string name="trailer">Trailer</string>
    <string name="add_to_list">Add to list</string>
    <string name="job_cast_text">(%s)</string>
    <string name="search_by_actor_placeholder">by actor:</string>
    <string name="filter_year_text">Release year</string>
    <string name="search_by_actor">Search by actor</string>
    <string name="remove_all_filters">Remove all filters</string>
    <string name="search_movies_tab_title">Movies</string>
    <string name="search_users_tab_title">Users</string>
    <string name="follow_user">Follow</string>
    <string name="following_user">Following</string>
    <string name="pending_follow_user">Pending</string>
    <string name="add_movie_to_list">Add movie to a list</string>
    <string name="add_to_watch_list">Watchlist</string>
    <string name="add_to_favorites_list">Favorites</string>
    <string name="add_to_custom_list">Custom lists</string>
    <string name="movie_add_to_list_success">Successfully added to list!</string>
    <string name="movie_already_in_list_error">Error: movie already in the list</string>
    <string name="snackbar_server_unreachable">Error: check your connection</string>
    <string name="suggest_movie_title">Not sure what to watch?</string>
    <string name="suggest_movie_text">Press “Suggest” to show a movie from your watchlist</string>
    <string name="suggest_me">Suggest me</string>
    <string name="no_movies_to_watch_list_error">No movies in your watchlist!</string>
    <string name="question_mark">\?</string>
    <string name="report_outcome_title">Report outcome</string>
    <string name="report_information_title">Report details</string>
    <string name="reported_comment_text">Reported comment:</string>
    <string name="report_list_text">in list:</string>
    <string name="report_list_owner_text">created by:</string>
    <string name="report_type_text">Report type:</string>
    <string name="report_outcome_text">Outcome:</string>
    <string name="report_outcome_null">To be defined</string>
    <string name="report_outcome_true">Comment approved</string>
    <string name="report_outcome_false">Comment refused</string>
    <string name="report_outcome_true_description_text">After a careful analysis we have considered that the comment in question is suitable for the platform and therefore it will continue to be visible.</string>
    <string name="report_outcome_false_description_text">After a careful analysis we have found that the comment in question is not suitable for the platform and it will therefore be removed.</string>
    <string name="reported_comment_description_text">A user has reported your comment for the aforementioned reason. This comment will remain invisible until we review the report.</string>
    <string name="logged_userprofile_settings">Profile settings</string>
    <string name="logged_userprofile_logout">Log out</string>
    <string name="logged_userprofile_logout_dialog_title">Log out?</string>
    <string name="logged_userprofile_logout_dialog_message">If you log out you will need to give credentials again.</string>
    <string name="logged_userprofile_logout_dialog_button_logout">logout</string>
    <string name="dialog_button_cancel">cancel</string>
    <string name="logging_in">Logging in…</string>
    <string name="userprofile_other_lists">Custom lists</string>
    <string name="write_new_comment">Write a comment…</string>
    <string name="no_comment">No comments yet</string>
    <string name="no_comment_text">Comment to be the first!</string>
    <string name="add_to_custom_list_page_title">Add to list</string>
    <string name="create_new_list">Create new list</string>
    <string name="search_among_your_lists">Search through your lists…</string>
    <string name="give_name_to_new_list">Give your new list a name.</string>
    <string name="confirm_button">Confirm</string>
    <string name="remove_follow_dialog_title">Stop following?</string>
    <string name="remove_follow_dialog_positive_button">Stop</string>
    <string name="remove_follower_dialog_title">Remove follower?</string>
    <string name="remove_follow_dialog_message">If you do, you will need to postpone another follow request to the user.</string>
    <string name="remove_follower_dialog_message">The user will need to postpone another follow request to you.</string>
    <string name="total_number_comments">%d comments</string>
    <string name="report_comment_dialog_title">Report comment</string>
    <string name="report_comment_dialog_button">Report</string>
    <string name="racist_report">Racist</string>
    <string name="hate_speech_report">Hate speech</string>
    <string name="sexist_report">Sexist</string>
    <string name="offensive_report">Offensive</string>
    <string name="spam_report">Spam</string>
    <string name="report_sent">Report sent</string>
    <string name="report_sent_text">The comment will be invisible until the report will be managed</string>
</resources>