<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_cinemateslogo"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/logoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/logo_sentence"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_edit_text_layout"
        style="@style/CineMates.TextInputLayout"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_error_text_view"
        tools:ignore="LabelFor,RtlSymmetry" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_edit_text"
            style="@style/CineMates.TextInputLayout.EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_text_input_layout"
        style="@style/CineMates.PasswordTextInputLayout"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/login_email_edit_text_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_error_text_view"
        tools:ignore="LabelFor,RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edit_text"
            style="@style/CineMates.TextInputLayout.EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/yellow_button"
        app:layout_constraintEnd_toEndOf="@+id/login_password_text_input_layout"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/login_password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_password_text_input_layout" />

    <TextView
        android:id="@+id/email_error_text_view"
        style="@style/CineMates.ErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/email_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoDescription"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/password_error_text_view"
        style="@style/CineMates.ErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/password_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit_text_layout"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/user_not_confirmed_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:includeFontPadding="false"
        android:text="@string/user_not_confirmed"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/server_unreachable_text_view"
        style="@style/CineMates.ErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/server_unreachable"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:layout_constraintVertical_bias="0.268"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/email_sent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/email_sent"
        android:textAlignment="center"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:layout_constraintVertical_bias="0.267"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/new_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_regular"
        android:includeFontPadding="false"
        android:text="@string/resend_email"
        android:textColor="@color/yellow_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_not_confirmed_error_text_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wrong_credentials_error_text_view"
        style="@style/CineMates.ErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/wrong_credentials"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:layout_constraintVertical_bias="0.26999998"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/logging_in_text_view"
        style="@style/CineMates.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/logging_in"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:layout_constraintVertical_bias="0.26999998"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/CineMates.Button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_button"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signup_textbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/signup"
            android:textColor="@color/yellow_button"
            app:layout_constraintBottom_toBottomOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/login_text"
            app:layout_constraintTop_toTopOf="@+id/login_text"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/no_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>