<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.recoverpassword.RecoverPasswordFragment">

    <ImageView
        android:id="@+id/recover_password_email_back_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recover_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/password_recover_title"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/recover_password_email_back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recover_password_email_back_icon"
        app:layout_constraintVertical_bias="0.24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/confirmation_code_continue_button"
        app:layout_constraintTop_toBottomOf="@+id/recover_password_title">

        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_baseline_lock_reset_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recover_password_title" />

        <TextView
            android:id="@+id/recover_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/password_recover_text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lock_icon" />

        <TextView
            android:id="@+id/recover_password_email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/password_recover_mail"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/recover_password_text"
            app:layout_constraintStart_toStartOf="@+id/recover_password_text"
            app:layout_constraintTop_toBottomOf="@+id/recover_password_text" />

        <TextView
            android:id="@+id/recover_password_email_error_text_view"
            style="@style/CineMates.ErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/email_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recover_password_email_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recover_password_email_edit_text_layout"
            style="@style/CineMates.TextInputLayout"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recover_password_email_error_text_view"
            tools:ignore="LabelFor,RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recover_password_email_edit_text"
                style="@style/CineMates.TextInputLayout.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_placeholder"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmation_code_continue_button"
        style="@style/CineMates.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/continue_button"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>